lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__stream_function_call.snap
---
source: lib/crates/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
[
  {
    "type": "stream_start"
  },
  {
    "type": "tool_call_start",
    "tool_call": {
      "id": "[UUID]",
      "name": "search",
      "type": "function",
      "arguments": {
        "query": "foo"
      },
      "raw_arguments": null,
      "provider_metadata": {
        "thoughtSignature": "sig_stream_g"
      }
    }
  },
  {
    "type": "tool_call_end",
    "tool_call": {
      "id": "[UUID]",
      "name": "search",
      "type": "function",
      "arguments": {
        "query": "foo"
      },
      "raw_arguments": null,
      "provider_metadata": {
        "thoughtSignature": "sig_stream_g"
      }
    }
  },
  {
    "type": "finish",
    "finish_reason": "tool_calls",
    "usage": {
      "input_tokens": 20,
      "output_tokens": 9,
      "reasoning_tokens": 0,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "[UUID]",
      "model": "gemini-test",
      "provider": "gemini",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "tool_call",
            "data": {
              "id": "[UUID]",
              "name": "search",
              "type": "function",
              "arguments": {
                "query": "foo"
              },
              "raw_arguments": null,
              "provider_metadata": {
                "thoughtSignature": "sig_stream_g"
              }
            }
          }
        ],
        "name": null,
        "tool_call_id": null
      },
      "finish_reason": "tool_calls",
      "usage": {
        "input_tokens": 20,
        "output_tokens": 9,
        "reasoning_tokens": 0,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": null,
      "warnings": [],
      "rate_limit": null
    }
  }
]
